# remote-bash-tool

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.opencode/: INSTALL.md
.opencode/tools/: remote-bash.ts
src/remote_bash_tool/: __init__.py  __main__.py  cli.py  ssh.py  tool.py
tests/: test_remote_bash_tool.py
