[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "remote-bash-tool"
version = "0.1.0"
description = "OpenCode custom tool for running remote bash commands over SSH."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "asyncssh>=2.14.2",
]

[project.scripts]
remote-bash = "remote_bash_tool.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/remote_bash_tool"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
